# FreshAI

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  demo.py  demo_transformers.py  interactive_demo.py  pyproject.toml  requirements.txt  test_context.py
evidence/: sample_evidence.txt
evidence/CASE_001/: case_description.txt
examples/: basic_usage.py  mcp_example.py  test_agents.py  test_gemma3_agent.py  tool_usage.py
examples/object_detection/: MODEL_COMPARISON.md  README.md  USAGE_GUIDE.md  advanced_detection.py  demo_detection.py  download_demo_images.py  open_vocab_detection.py  test_detection.py
freshai/: __init__.py  cli.py
freshai/agent/: __init__.py  base_agent.py  investigator.py  ollama_agent.py  transformers_agent.py
freshai/agent/tools/: __init__.py  bash_tool.py  evidence_analyzer_tool.py  image_analysis_tool.py  web_search_tool.py
freshai/config/: __init__.py  config.py  models.py
freshai/core/: __init__.py  base.py  core.py
freshai/llm/: __init__.py  ollama.py  transformers.py
freshai/mcp/: __init__.py  client.py  config.py
freshai/tools/: __init__.py  evidence.py  image.py  registry.py  text.py
freshai/utils/: __init__.py  logging.py  validation.py
freshai/vlm/: __init__.py  ollama.py  transformers.py
mcp_servers/: __init__.py  database.py  filesystem.py  web_search.py
tests/: __init__.py  test_basic.py  test_mcp.py
